# TomeAI

./: README.md
Synapse/: CMakeLists.txt  README.md
Synapse/include/cloud/: cloud_brain.h
Synapse/include/fileAgent/: FileCreator.h
Synapse/include/fileDeleter/: FileDeleter.h
Synapse/include/grokBrain/: GrokBrain.h
Synapse/include/judgment/: JudgmentLogger.h
Synapse/include/local/: local_brain.h
Synapse/include/security/: security_guard.h
Synapse/include/systemExecutor/: SystemExecutor.h
Synapse/include/utils/: TrashManager.h
Synapse/prompts/: audit_system.txt  audit_task_create.txt  audit_task_delete.txt  exec_router.txt
Synapse/src/: main.cpp
Synapse/src/cloud/: cloud_brain.cpp
Synapse/src/fileAgent/: FileCreator.cpp
Synapse/src/fileDeleter/: FileDeleter.cpp
Synapse/src/grokBrain/: GrokBrain.cpp
Synapse/src/judgment/: JudgmentLogger.cpp
Synapse/src/local/: local_brain.cpp
Synapse/src/security/: security_guard.cpp
Synapse/src/systemExecutor/: SystemExecutor.cpp
Synapse/src/utils/: TrashManager.cpp
Synapse/tools/: deepseek_request.json  stress_test.py
Synapse/tools/training_data/: log_2026-01-13_01-56-17.txt  log_2026-01-13_01-56-36.txt  log_2026-01-13_01-56-56.txt  log_2026-01-13_01-57-15.txt
synapse-gui/: package-lock.json  package.json
synapse-gui/src/: index.html  main.js  styles.css
synapse-gui/src-tauri/: Cargo.toml  synapse-x86_64-unknown-linux-gnu  tauri.conf.json
synapse-gui/src-tauri/capabilities/: default.json
synapse-gui/src-tauri/src/: main.rs
synapse-gui/src-tauri/training_data/: log_2026-01-11_04-48-39.txt  log_2026-01-11_04-49-43.txt  log_2026-01-11_04-51-18.txt  log_2026-01-11_04-56-42.txt  log_2026-01-11_04-57-40.txt
